# napari-flowreg

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-release.yml  readme-normalize.yml  test.yml
src/napari_flowreg/: __init__.py  flow_visualization_widget.py  flowreg_widget.py  motion_analysis_widget.py  napari.yaml  widgets.py
tests/: conftest.py  test_integration.py  test_manifest.py  test_progress_signal.py  test_widget.py
