[project]
name = "napari-flowreg"
version = "0.0.1-alpha.1"
description = "napari plugin for Flow-Registration motion correction"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "FlowReg Team"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: napari",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    "napari",
    "napari-plugin-engine>=0.2.0",
    "pyflowreg",
    "qtpy",
    "numpy",
]

[project.entry-points."napari.manifest"]
napari-flowreg = "napari_flowreg:napari.yaml"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_flowreg = ["napari.yaml"]